Initial Tailwind config Tokenization done

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- Features Section -->
     <section class="features" id="features">
         <div class="container">
-            <h2>A mash of Ground News + Perplexity + Palantir</h2>
+            <h2>A mash of Ground News + Perplexity </h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">🤖</div>
@@ -98,7 +98,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">📊</div>
                     <h3>Regional Trend Analytics</h3>
-                    <p>Palantir-style mapping of stories across districts, tracking bias, media attention, and sentiment over time. See how issues evolve geographically.</p>
+                    <p>Mapping of stories across districts, tracking bias, media attention, and sentiment over time. See how issues evolve geographically.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🌍</div>
