--- a/perspectivity-landing.html
+++ b/perspectivity-landing.html
@@ -311,7 +311,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16 fade-in-up">
                 <h2 class="font-playfair text-3xl md:text-4xl font-bold text-neutral-900 mb-4">
-                    A mash of <span class="text-gradient">Ground News + Perplexity + Palantir</span>
+                    A mash of <span class="text-gradient">Ground News + Perplexity </span>
                 </h2>
                 <p class="text-lg text-neutral-600 max-w-3xl mx-auto">
                     Six powerful AI agents working together to provide unprecedented news transparency
@@ -370,7 +370,7 @@
                     </div>
                     <h3 class="font-semibold text-xl text-neutral-800 mb-4">Regional Trend Analytics</h3>
                     <p class="text-neutral-600 leading-relaxed">
-                        Palantir-style mapping of stories across districts, tracking bias, media attention, and sentiment over time. See how issues evolve geographically.
+                       Mapping of stories across districts, tracking bias, media attention, and sentiment over time. See how issues evolve geographically.
                     </p>
                 </div>
 
