add the introduction video
Signed-off-by: Naymul Islam <naymul504@gmail.com>

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="tagline">"Every Story. Every Side. In Your Language."</p>
             <p>In a world overwhelmed by biased narratives and language barriers, Perspectivity empowers citizens with multi-perspective news in their own language. Built for low-resource countries, we provide an open-source news insight framework that scrapes, aggregates, and analyzes regional news in real time.</p>
             <div class="hero-buttons">
-                <a href="#demo" class="primary-btn">Watch Demo</a>
+                <a href="https://youtu.be/X3_Tdz3np24?si=DuuDo2EllWlxbUtI" class="primary-btn">Watch Why We Built This Demo</a>
                 <a href="https://drishtikon.life" class="secondary-btn">Try Drishtikon Live</a>
             </div>
         </div>
