--- a/perspectivity-landing.html
+++ b/perspectivity-landing.html
@@ -252,7 +252,7 @@
                 
                 <div class="flex flex-col sm:flex-row gap-4 justify-center items-center animate-fade-in-up" style="animation-delay: 0.6s;">
                     <a href="#demo" class="bg-gradient-warm text-white px-8 py-4 rounded-lg font-semibold text-lg hover:shadow-elegant transition-all duration-300 shadow-soft">
-                        Watch Demo
+                        Watch Why We Built This
                     </a>
                     <a href="https://drishtikon.life" class="border-2 border-coral/20 text-neutral-700 bg-white/80 backdrop-blur-sm px-8 py-4 rounded-lg font-semibold text-lg hover:border-coral hover:text-coral transition-all duration-300 shadow-soft">
                         Try Drishtikon Live
